# Repo14

./: .gitignore  README.md  pyproject.toml
data/: products.json
src/: main.py  utils.py
tests/: conftest.py  report_cover  test_main.py
